syntax="proto3";

package search.v1;

option go_package="search/v1;searchv1";


service SyncService {
  rpc InputUser(InputUserRequest)returns(InputUserResponse);
  rpc InputArticle(InputArticleRequest)returns(InputArticleResponse);
  //rpc InputAny(InputAnyRequest)returns(InputAnyResponse);
}
message InputUserRequest{
  User user=1;
}
message InputUserResponse{

}
message InputArticleRequest{
  Article article=1;
}
message InputArticleResponse{

}

message InputAnyRequest {
  string indexName = 1;
  string docId = 2;
  string data = 3;
}

message InputAnyResponse {

}
message User{
  int64 id =1;
  string nickname=2;
  string phone=3;
}

message Article{
  int64 id =1;
  string title=2;
  string content=3;
  int32 status=4;
  string pic=5;
  repeated string pics=6;
  int32 category=7;
  int32 articleCategory=8;
  string richText=9;
  string createdAt=10;
  int64 uid =11;
}
